--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "name": "Aaron Storck",
     "email": "aaronstorck@gmail.com"
   },
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "Environment module to determine current running environment based on NODE_ENV.",
   "main": "index.js",
   "repository": "https://github.com/asleepinglion/ouro-env",
   "dependencies": {
-    "ouro": "*"
+    "ouro": "*",
+    "ouro-base": "*"
   },
   "license": "MIT"
 }
